[package]
name = "fdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = {version = "1.33.0", features = ["full"]}
# async-trait = "0.1.74"
dirs = "5.0.1"
walkdir = "2.4.0"
# futures = "0.3.29"
# async-recursion = "1.0.5"



